--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="{% static 'css/layout.css' %}">
   </head>
   <div class="my-div">
-  <body>{% block content %} {% endblock %}  </body>
+  <body>
+    <nav>
+      <a href="{% url 'views.hello_world' %}"> Home </a>
+    </nav>
+    {% block content %} {% endblock %}
+  </body>
 </div>
 </html>
