--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,3 +1,10 @@
 .my-div{
 margin-left: 10%;
 }
+.cards{
+  float: left;
+margin: 10px;
+padding: 10px;
+max-width: 300px;
+border: 1px solid black;
+}
